# SRE-web-app

./: .gitignore  DEPLOYMENT.md  README.md
docs/: SRE-app-User-Guide.html  user-guide.md
docs/design/: BRAND.md  DESIGN.md
docs/plans/: 2026-06-23-plan-1-supabase-foundation.md  2026-06-23-plan-2-employee-web.md  2026-06-23-plan-3-admin-web.md  2026-06-23-plan-4-historical-import.md  2026-06-24-plan-5-reporting-exports.md  2026-06-24-plan-6-notifications.md  2026-07-02-expense-tracker-design.md  2026-07-03-remote-mcp-design.md  2026-07-03-remote-mcp-plan.md
docs/specs/: 2026-06-23-sre-timesheet-design.md
scripts/: build-user-guide.mjs  provision-admin.mjs  provision-dev-user.mjs
scripts/import/: README.md  pyproject.toml
scripts/import/sre_import/: __init__.py  apply.py  cli.py  client.py  config.py  hash.py  plan.py  rules.py  schema.py
scripts/import/sre_import.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/import/sre_import/parse/: balances_csv.py  workbook.py
scripts/import/tests/: test_balances_csv.py  test_rules.py  test_workbook_parse.py
scripts/import/tests/fixtures/: balances_sample.csv  employee_sample.xlsx
scripts/mcp-expense/: README.md  package-lock.json  package.json  tsconfig.json
supabase/: config.toml  seed.sql
supabase/migrations/: 20260623000002_org_users.sql  20260623000003_taxonomy.sql  20260623000004_projects.sql  (+49 more)
web/: .env.example  .env.local.example  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vercel.json  vitest.config.ts
web/app/: layout.tsx  (+3 more)
(+230 files in other folders)
