[project]
name = "sre-import"
version = "0.1.0"
description = "Historical Excel importer for the SRE Timesheet app"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "httpx>=0.27",
    "pydantic>=2.6",
    "click>=8.1",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
sre-import = "sre_import.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sre_import*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
